--- a/Frontend/add.html
+++ b/Frontend/add.html
@@ -2,18 +2,51 @@
 <html>
 <head>
     <title>Add Music</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap core CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <h2>Music Information</h2>
-    <form action = "" method="post">
-    <table>
-        <tr><td>Title</td><td><input type="text" id="title" name="title"></td></tr>
-        <tr><td>Singer</td><td><input type="text" id="singer" name="singer"></td></tr>
-        <tr><td>Genre</td><td><input type="text" id="genre" name="genre"></td></tr>
-        <tr><td>TimeLine</td><td><input type="text" id="timeline" name="timeline"></td></tr>
-        <tr><td><button onclick="sendPost()" id="sub" type="submit" value="Submit">Add</button></td></tr>
-    </table>
-    </form>
+    <div class="container-fluid">
+        <nav class="navbar navbar-expand-md music-navbar">
+          <a class="navbar-brand" href="#">Music API</a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="collapsibleNavbar">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link" href="add.html">Add</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="index.html">View</a>
+              </li>   
+            </ul>
+          </div>  
+        </nav>
+      </div>
+
+    <div class="container-fluid">
+        <h2 id="add-new-music">Add new Music</h2>
+    </div>
+    <div class="container-fluid add-music-table">
+        <form action = "" method="post">
+            <table class="add-new-table">
+                <tr><td>Title</td><td><input type="text" id="title" name="title"></td></tr>
+                <tr><td>Singer</td><td><input type="text" id="singer" name="singer"></td></tr>
+                <tr><td>Genre</td><td><input type="text" id="genre" name="genre"></td></tr>
+                <tr><td>TimeLine</td><td><input type="text" id="timeline" name="timeline"></td></tr>
+                <tr><td><button onclick="sendPost()" class="add-new-btn" id="sub" type="submit" value="Submit">Add</button></td></tr>
+            </table>
+            </form>
+    </div>
+    
     <script src="add.js">
     </script>
       
