--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -9,22 +9,43 @@
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-
+    <link rel="stylesheet" href="./style.css">
   </head>
   <body>
-           <h2>Data</h2>
-           <form action = "" method="post">
-           <table border=5 >
-            <thead>
-                <td>ID</td>
-                <td>Title</td>
-                <td>Singer</td>
-                <td>Genre</td>
-                <td>Timeline</td>
-            </thead >
+
+    <div class="container-fluid">
+      <nav class="navbar navbar-expand-md music-navbar">
+        <a class="navbar-brand" href="#">Music API</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="collapsibleNavbar">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="add.html">Add</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="index.html">View</a>
+            </li>   
+          </ul>
+        </div>  
+      </nav>
+    </div>
+  
+    <form action = "" method="post">
+      <table class="table table-dark table-hover music-table">
+        <thead>
+          <tr class="music-table-title-row">
+            <th>ID</th>
+            <th>Title</th>
+            <th>Singer</th>
+            <th>Genre</th>
+            <th>Timeline</th>
+          </tr>
+        </thead>
         <tbody id="view"></tbody>
-        </table>
-        </form>
-      <script src="index.js"></script> 
+      </table>
+    </form>
+    <script src="index.js"></script> 
 </body>
 </html>
